Further implementation of core

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,31 +5,23 @@ if (POLICY CMP0141)
   set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
 endif()
 
-project ("Visual-Novel")
+project ("CyanVNE")
 
 if (CMAKE_HOST_WIN32)
   add_compile_definitions( IS_WIN32_SYS )
 endif()
 
-# Visual Text SRC
-include_directories( "./" )
-add_subdirectory ("Core")
-# add_subdirectory ("Asset")
-# add_subdirectory ("Render")
-# add_subdirectory ("Entry")
-# add_subdirectory ("Resolution")
-
 # SDL
 set (BUILD_SHARED_LIBS false)
 set(SDL_STATIC on)
-add_subdirectory( External/SDL )
-include_directories( External/SDL/include )
+add_subdirectory( "External/SDL" )
+include_directories( "External/SDL/include" )
 
 # SDL Extension
-add_subdirectory( External/SDL_ttf )
-include_directories( External/SDL_ttf/include )
-add_subdirectory( External/SDL_image )
-include_directories( External/SDL_image/include )
+add_subdirectory( "External/SDL_ttf" )
+include_directories( "External/SDL_ttf/include" )
+add_subdirectory( "External/SDL_image" )
+include_directories( "External/SDL_image/include" )
 
 # Now the problem is that SDL_mixer and SDL_image cannot participate in cmake generation together when using cmake cache instead of rebuilding.
 # Unless you don't use the vendor library
@@ -39,14 +31,22 @@ include_directories( External/SDL_image/include )
 # include_directories( External/SDL_mixer/include )
 
 # ImgUI
-add_subdirectory( External/pre_imgui )
-include_directories( External/pre_imgui )
+add_subdirectory( "External/pre_imgui" )
+include_directories( "External/pre_imgui" )
 
 # SoLoud
 add_compile_definitions ( WITH_MINIAUDIO )
-add_subdirectory ( External/pre_soloud )
-include_directories ( External/pre_soloud/soloud/include )
+add_subdirectory ( "External/pre_soloud" )
+include_directories ( "External/pre_soloud/soloud/include" )
 
 # Logger
-add_subdirectory( External/spdlog )
-include_directories( External/spdlog/include )
+add_subdirectory( "External/spdlog" )
+include_directories( "External/spdlog/include" )
+
+# CyanVNE SRC
+include_directories( "./" )
+add_subdirectory ("CyanVNE")
+add_subdirectory ("Core")
+add_subdirectory ("Resource")
+# add_subdirectory ("Render")
+# add_subdirectory ("Resolution")
