Imple a basic stream

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,6 +47,6 @@ include_directories( "External/spdlog/include" )
 include_directories( "./" )
 add_subdirectory ("CyanVNE")
 add_subdirectory ("Core")
-add_subdirectory ("Resource")
+add_subdirectory ("Resources")
 # add_subdirectory ("Render")
 # add_subdirectory ("Resolution")
