Some normal update

--- a/Core/CMakeLists.txt
+++ b/Core/CMakeLists.txt
@@ -2,7 +2,13 @@
 set(CyanVNECore_SRC
   "Logger/Logger.h"
   "Logger/Logger.cpp"
- "CoreException/CoreException.h" "SpscQueue/SpscQueue.h" "Stream/Stream.h" "TSVector/TSVector.h" "Serialization/Serialization.h")
+  "CoreException/CoreException.h"
+  "SpscQueue/SpscQueue.h"
+  "Stream/Stream.h"
+  "TSVector/TSVector.h"
+  "Serialization/Serialization.h"
+  "MemoryStreamImpl/MemoryStreamImpl.h"
+  "MemoryStreamImpl/MemoryStreamImpl.cpp")
 
 add_library(CyanVNECore STATIC ${CyanVNECore_SRC})
 
