--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,5 +48,5 @@ include_directories( "./" )
 add_subdirectory ("CyanVNE")
 add_subdirectory ("Core")
 add_subdirectory ("Resources")
-# add_subdirectory ("Render")
+add_subdirectory ("Runtime")
 # add_subdirectory ("Resolution")
