Some basic implements.

--- a/Runtime/CMakeLists.txt
+++ b/Runtime/CMakeLists.txt
@@ -3,8 +3,11 @@ set(CyanVNERuntime_SRC
   "GuiContext/GuiContext.h"
   "GuiContext/GuiContext.cpp"
   "WMContext/WMContext.h"
-  
- "WindowContext/WindowContext.h" "WindowContext/WindowContext.cpp" "RuntimeException/RuntimeException.h" "BasicRender/BasicRender.h")
+  "WindowContext/WindowContext.h"
+  "WindowContext/WindowContext.cpp"
+  "RuntimeException/RuntimeException.h"
+  "BasicRender/BasicRender.h"
+  "BasicRender/BasicRender.cpp" "EventCore/EventCore.h" "EventCore/EventCore.cpp")
 
 add_library(CyanVNERuntime STATIC ${CyanVNERuntime_SRC})
 
