--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "External/yaml-cpp"]
 	path = External/yaml-cpp
 	url = https://github.com/jbeder/yaml-cpp.git
+[submodule "External/boost"]
+	path = External/boost
+	url = https://github.com/boostorg/boost.git
