--- a/CyanVNE/CMakeLists.txt
+++ b/CyanVNE/CMakeLists.txt
@@ -1,6 +1,13 @@
 ﻿
 add_executable (CyanVNE "CyanVNE.cpp" "CyanVNE.h")
 
+target_link_libraries (CyanVNE 
+  CyanVNECore
+  CyanVNEParser
+  CyanVNEResources
+  CyanVNERuntime
+  )
+
 if (CMAKE_VERSION VERSION_GREATER 3.12)
   set_property(TARGET CyanVNE PROPERTY CXX_STANDARD 20)
 endif()
