--- a/Runtime/CMakeLists.txt
+++ b/Runtime/CMakeLists.txt
@@ -1,23 +1,13 @@
 ﻿
 set(CyanVNERuntime_SRC
-  "GuiContext/GuiContext.h"
-  "GuiContext/GuiContext.cpp"
-  "WMContext/WMContext.h"
-  "WindowContext/WindowContext.h"
-  "WindowContext/WindowContext.cpp"
-  "RuntimeException/RuntimeException.h"
-  "BasicRender/BasicRender.h"
-  "BasicRender/BasicRender.cpp" "EventCore/EventCore.h" "EventCore/EventCore.cpp")
+  "Buffer/Buffer.cpp"
+)
 
 add_library(CyanVNERuntime STATIC ${CyanVNERuntime_SRC})
 
 set(CyanVNERuntime_Require
   CyanVNECore
-  SDL3-static
-  SDL3_image::SDL3_image
-  SDL3_ttf::SDL3_ttf
-  imgui
-  soloud
+  CyanVNEPlatform
 )
 
 target_link_libraries(CyanVNERuntime PUBLIC ${CyanVNERuntime_Require})
