Fixed some bugs and introduced the GameState concept.

--- a/Core/CMakeLists.txt
+++ b/Core/CMakeLists.txt
@@ -8,12 +8,16 @@ set(CyanVNECore_SRC
   "TSVector/TSVector.h"
   "Serialization/Serialization.h"
   "MemoryStreamImpl/MemoryStreamImpl.h"
-  "MemoryStreamImpl/MemoryStreamImpl.cpp" "PathToStream/PathToStream.h" "Stream/Stream.cpp")
+  "MemoryStreamImpl/MemoryStreamImpl.cpp"
+  "PathToStream/PathToStream.h"
+  "Stream/Stream.cpp"
+)
 
 add_library(CyanVNECore STATIC ${CyanVNECore_SRC})
 
 set(CyanVNECore_Require
   spdlog::spdlog
+  Boost::lockfree
   SDL3-static
 )
 
