--- a/Parser/CMakeLists.txt
+++ b/Parser/CMakeLists.txt
@@ -1,14 +1,20 @@
 ﻿
 set(CyanVNEParser_SRC
   "AppSettings/AppSettings.h"
-  "AppSettings/AppSettings.cpp"
+  "AppSettings/AppSettingsParsers/AppSettingsParsers.cpp"
+  "AppSettings/AppSettingsParsers/AppSettingsParsers.h"
   "ParserYamlInterface/ParserYamlInterface.h"
   "ParserException/ParserException.h"
   "ParserUtil/ParserUtil.h"
   "ParserUtil/ParserUtil.cpp"
   "ThemeConfig/ThemeConfig.h"
   "ThemeConfig/ThemeConfig.cpp"
- "ThemeConfigParser/ThemeConfigParser.h" "ThemeConfigParser/ThemeConfigParser.cpp")
+  "ThemeConfigParser/ThemeConfigParser.h"
+  "ThemeConfigParser/ThemeConfigParser.cpp"
+  "Framework/Framework.h"
+  "Framework/Framework.cpp"
+  "ParserFactories/ParserFactories.h"
+)
 
 add_library(CyanVNEParser STATIC ${CyanVNEParser_SRC})
 
@@ -20,5 +26,5 @@ set(CyanVNEParser_Require
 target_link_libraries(CyanVNEParser PUBLIC ${CyanVNEParser_Require})
 
 if (CMAKE_VERSION VERSION_GREATER 3.12)
-  set_property(TARGET CyanVNEParser PROPERTY CXX_STANDARD 20)
+  set_property(TARGET CyanVNEParser PROPERTY CXX_STANDARD 23)
 endif()
