Change the cache manager's cache eviction algorithm from LRU to a more advanced 2Q

--- a/Resources/CMakeLists.txt
+++ b/Resources/CMakeLists.txt
@@ -12,7 +12,14 @@ set(CyanVNEResources_SRC
   "UniversalPathToStream/UniversalPathToStream.h"
   "ThemeResourcesPacker/ThemeResourcesPacker.cpp"
   "ThemeResourcesPacker/ThemeResourcesPacker.h"
- "ResourcesManager/ResourcesManager.h" "ResourcesManager/ResourcesManager.cpp" "ThemeResourcesManager/ThemeResourcesManager.h" "ThemeResourcesManager/ThemeResourcesManager.cpp")
+  "ResourcesManager/ResourcesManager.h"
+  "ResourcesManager/ResourcesManager.cpp"
+  "ThemeResourcesManager/ThemeResourcesManager.h"
+  "Adapters/SdlIoStreamAdapter.h"
+  "Adapters/SdlIoStreamAdapter.cpp"
+  "CachingResourcesManager/CachingResourcesManager.h"
+  "CachingResourcesManager/CachingResourcesManager.cpp"
+)
 
 add_library(CyanVNEResources STATIC ${CyanVNEResources_SRC})
 
@@ -25,5 +32,5 @@ set(CyanVNEResources_Require
 target_link_libraries(CyanVNEResources PUBLIC ${CyanVNEResources_Require})
 
 if (CMAKE_VERSION VERSION_GREATER 3.12)
-  set_property(TARGET CyanVNEResources PROPERTY CXX_STANDARD 20)
+  set_property(TARGET CyanVNEResources PROPERTY CXX_STANDARD 23)
 endif()
