Initially connect the parsing module to the ECS system.

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,6 @@ CMakeUserPresets.json
 /cmake-build-debug/
 /.idea
 /out/build
+/cmake-build-debug-mingw/.cmake/api/v1/query
+/cmake-build-debug-visual-studio
+/External/boost/libs
