Add CommandParser and CommandsParser with associated CMake configuration and submodule updates.

--- a/.gitmodules
+++ b/.gitmodules
@@ -19,12 +19,15 @@
 [submodule "External/yaml-cpp"]
 	path = External/yaml-cpp
 	url = https://github.com/jbeder/yaml-cpp.git
-[submodule "External/boost"]
-	path = External/boost
-	url = https://github.com/boostorg/boost.git
-[submodule "External/lua-cmake"]
-	path = External/lua-cmake
-	url = https://gitlab.com/codelibre/lua/lua-cmake.git
 [submodule "External/entt"]
 	path = External/entt
 	url = https://github.com/NekoCCN/entt.git
+[submodule "External/boost"]
+	path = External/boost
+	url = https://github.com/boostorg/boost.git
+[submodule "External/sol2"]
+	path = External/sol2
+	url = https://github.com/ThePhD/sol2.git
+[submodule "External/pre_LuaJIT/LuaJIT"]
+	path = External/pre_LuaJIT/LuaJIT
+	url = https://github.com/LuaJIT/LuaJIT.git
