Add CyanVNEAudio library and update CMake configuration.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -118,6 +118,7 @@ include_directories( "./" )
 add_subdirectory ("CyanVNE")
 add_subdirectory ("Core")
 add_subdirectory ("Platform")
+add_subdirectory ("Audio")
 add_subdirectory ("Resources")
 add_subdirectory ("Runtime")
 add_subdirectory ("Parser")
