--- a/Runtime/CMakeLists.txt
+++ b/Runtime/CMakeLists.txt
@@ -14,7 +14,8 @@ set(CyanVNERuntime_SRC
   "Systems/Systems.cpp"
   "Scene/Scene.cpp"
  "GuiSystem/GuiSystem.h" "GuiSystem/GuiSystem.cpp" "IGuiWindow/IGuiWindow.h" "ICommand/ICommand.h" "IGameState/IGameState.cpp" "Commands/Commands.h" "Events/Events.h"
-        RuntimeException/RuntimeException.h)
+        RuntimeException/RuntimeException.h
+        Events/AudioEvents.h)
 
 add_library(CyanVNERuntime STATIC ${CyanVNERuntime_SRC})
 
