Refactor Application class to integrate GraphicsContext and improve initialization flow

--- a/CyanVNE/CMakeLists.txt
+++ b/CyanVNE/CMakeLists.txt
@@ -1,5 +1,5 @@
 ﻿
-add_executable (CyanVNE "CyanVNE.cpp" "CyanVNE.h" "Application/Application.h" "Application/Application.cpp" "ToolApplication/ToolApplication.h")
+add_executable (CyanVNE "CyanVNE.cpp" "CyanVNE.h" "Application/Application.h" "ToolApplication/ToolApplication.h")
 
 target_link_libraries (CyanVNE 
   CyanVNECore
