REMOVE some obsolete code.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ endif()
 
 # Boost
 add_subdirectory( "External/boost" )
+include_directories( "External/boost/fiber/examples" )
 
 # LuaJIT
 include(ExternalProject)
