Add AudioEvents header for audio event handling

--- a/Audio/CMakeLists.txt
+++ b/Audio/CMakeLists.txt
@@ -4,6 +4,7 @@ set(CyanVNEAudio_SRC
         SoloudAudioEngine/SoloudAudioEngine.cpp
         SoloudAudioEngine/SoloudAudioEngine.h
         AudioManager/AudioManager.h
+        Events/AudioEvents.h
 )
 
 add_library(CyanVNEAudio STATIC ${CyanVNEAudio_SRC})
